# esp32-sdl3-example

./: .gitignore  CMakeLists.txt  README.md  diagram.json  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp-box-3  sdkconfig.defaults.esp32_c6_devkit  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.lilygo-ttgo-t5-47  sdkconfig.defaults.m5stack_core_s3  wokwi.toml
.github/workflows/: build.yml  release.yml  test.yml
assets/: main.lua
boards/: esp-box-3.cfg  esp-box.cfg  esp32_c6_devkit.cfg  esp32_p4_function_ev_board.cfg  m5stack_core_s3.cfg
boards/esp-box/: wokwi.toml
boards/esp-box-3/: diagram.json  wokwi.toml
boards/esp32_c6_devkit/: diagram.json  wokwi.toml
boards/esp32_p4_function_ev_board/: diagram.json  wokwi.toml
boards/m5stack_core_s3/: diagram.json  wokwi.toml
components/SDL/: CMakeLists.txt  idf_component.yml
components/SDL/include/SDL3/: SDL_platform.h  SDL_platform_defines.h
components/SDL/include/build_config/: SDL_build_config.h  SDL_build_config_esp_idf.h
components/SDL_image/: CMakeLists.txt
components/SDL_ttf/: CMakeLists.txt  idf_component.yml
components/georgik__sdl/: README.md
components/georgik__sdl/include/build_config/: SDL_build_config_esp_idf.h
components/georgik__sdl/src/thread/esp-idf/: SDL_syscond.c  SDL_sysmutex.c  SDL_syssem.c  SDL_systhread.c  SDL_systhread_c.h
components/georgik__sdl/src/thread/pthread/: pthread_espidf.c
components/georgik__sdl/src/timer/esp-idf/: SDL_systimer.c
components/georgik__sdl/src/video/esp-idf/: SDL_espidfevents.c  SDL_espidfevents.h  SDL_espidfframebuffer.c  SDL_espidfframebuffer.h  SDL_espidfshared.h  SDL_espidftouch.c  SDL_espidftouch.h  SDL_espidfvideo.c  SDL_espidfvideo.h
main/: CMakeLists.txt  esp32-sdl3-example.c  filesystem.c  filesystem.h  graphics.c  graphics.h  idf_component.yml  sdl-test.c  text.c  text.h
