idf_component_register(SRCS 
                        "SDL/src/SDL.c"
                        "SDL/src/atomic/SDL_atomic.c"
                        "SDL/src/atomic/SDL_spinlock.c"
                        "SDL/src/events/SDL_events.c"
                        "SDL/src/events/SDL_quit.c"
                        "SDL/src/filesystem/SDL_filesystem.c"
                        "SDL/src/stdlib/SDL_iconv.c"
                        "SDL/src/stdlib/SDL_getenv.c"
                        "SDL/src/stdlib/SDL_malloc.c"
                        "SDL/src/stdlib/SDL_stdlib.c"
                        "SDL/src/stdlib/SDL_string.c"
                        "SDL/src/timer/SDL_timer.c"
                        "SDL/src/timer/esp-idf/SDL_systimer.c"
                        "SDL/src/thread/SDL_thread.c"
                        "SDL/src/thread/esp-idf/SDL_syscond.c"
                        "SDL/src/thread/esp-idf/SDL_sysmutex.c"
                        "SDL/src/thread/esp-idf/SDL_syssem.c"
                        "SDL/src/thread/esp-idf/SDL_systhread.c"
                        "SDL/src/thread/esp-idf/SDL_systls.c"
                        "SDL/src/SDL_error.c"
                        "SDL/src/SDL_hashtable.c"
                        "SDL/src/SDL_hints.c"
                        "SDL/src/SDL_log.c"
                        "SDL/src/SDL_properties.c"
                        "SDL/src/SDL_utils.c"
                    INCLUDE_DIRS "include"
                        "SDL/src"
)
