idf_component_register(SRCS
                        "SDL/src/SDL.c"
                        "SDL/src/atomic/SDL_atomic.c"
                        "SDL/src/atomic/SDL_spinlock.c"
                        "SDL/src/events/SDL_displayevents.c"
                        "SDL/src/events/SDL_events.c"
                        "SDL/src/events/SDL_keyboard.c"
                        "SDL/src/events/SDL_keymap.c"
                        "SDL/src/events/SDL_mouse.c"
                        "SDL/src/events/SDL_pen.c"
                        "SDL/src/events/SDL_quit.c"
                        "SDL/src/events/SDL_touch.c"
                        "SDL/src/events/SDL_windowevents.c"
                        "SDL/src/filesystem/SDL_filesystem.c"
                        "SDL/src/file/SDL_iostream.c"
                        "SDL/src/stdlib/SDL_iconv.c"
                        "SDL/src/stdlib/SDL_getenv.c"
                        "SDL/src/stdlib/SDL_malloc.c"
                        "SDL/src/stdlib/SDL_memset.c"
                        "SDL/src/stdlib/SDL_stdlib.c"
                        "SDL/src/stdlib/SDL_string.c"
                        "SDL/src/timer/SDL_timer.c"
                        "SDL/src/timer/esp-idf/SDL_systimer.c"
                        "SDL/src/thread/SDL_thread.c"
                        "SDL/src/thread/esp-idf/SDL_syscond.c"
                        "SDL/src/thread/esp-idf/SDL_sysmutex.c"
                        "SDL/src/thread/esp-idf/SDL_sysrwlock.c"
                        "SDL/src/thread/esp-idf/SDL_syssem.c"
                        "SDL/src/thread/esp-idf/SDL_systhread.c"
                        "SDL/src/thread/esp-idf/SDL_systls.c"
                        "SDL/src/cpuinfo/SDL_cpuinfo.c"
                        "SDL/src/SDL_assert.c"
                        "SDL/src/SDL_error.c"
                        "SDL/src/SDL_hashtable.c"
                        "SDL/src/SDL_hints.c"
                        "SDL/src/SDL_log.c"
                        "SDL/src/render/SDL_render.c"
                        "SDL/src/render/SDL_yuv_sw.c"
                        "SDL/src/video/SDL_RLEaccel.c"
                        "SDL/src/video/SDL_blit.c"
                        "SDL/src/video/SDL_blit_0.c"
                        "SDL/src/video/SDL_blit_1.c"
                        "SDL/src/video/SDL_blit_A.c"
                        "SDL/src/video/SDL_blit_N.c"
                        "SDL/src/video/SDL_blit_auto.c"
                        "SDL/src/video/SDL_blit_copy.c"
                        "SDL/src/video/SDL_blit_slow.c"
                        "SDL/src/video/SDL_bmp.c"
                        "SDL/src/video/SDL_fillrect.c"
                        "SDL/src/video/SDL_pixels.c"
                        "SDL/src/video/SDL_rect.c"
                        "SDL/src/video/SDL_surface.c"
                        "SDL/src/video/SDL_video.c"
                        "SDL/src/video/SDL_yuv.c"
                        "SDL/src/video/yuv2rgb/yuv_rgb_std.c"
                        "SDL/src/video/dummy/SDL_nullevents.c"
                        "SDL/src/video/dummy/SDL_nullframebuffer.c"
                        "SDL/src/video/dummy/SDL_nullvideo.c"
                        "SDL/src/SDL_properties.c"
                        "SDL/src/SDL_utils.c"
                    INCLUDE_DIRS "include"
                        "SDL/src"
)
